UF-10161: Fixed bad content type