@@ -1,18 +1,19 @@
 package se.sundsvall.parkingpermit.util;
 
+import static java.util.Collections.emptyList;
+import static java.util.Objects.isNull;
+import static java.util.Optional.ofNullable;
+import static org.zalando.problem.Status.NOT_FOUND;
+
+import java.util.Optional;
+
+import org.zalando.problem.Problem;
+
 import generated.se.sundsvall.casedata.AddressDTO;
 import generated.se.sundsvall.casedata.AddressDTO.AddressCategoryEnum;
 import generated.se.sundsvall.casedata.ErrandDTO;
 import generated.se.sundsvall.casedata.StakeholderDTO;
 import generated.se.sundsvall.casedata.StakeholderDTO.TypeEnum;
-import org.zalando.problem.Problem;
-
-import java.util.Optional;
-
-import static java.util.Collections.emptyList;
-import static java.util.Objects.isNull;
-import static java.util.Optional.ofNullable;
-import static org.zalando.problem.Status.NOT_FOUND;
 
 public final class ErrandUtil {
 
@@ -20,12 +21,12 @@ public final class ErrandUtil {
 
 	public static StakeholderDTO getStakeholder(ErrandDTO errand, String role) {
 		return getOptionalStakeholder(errand, null, role)
-			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, String.format("Errand is missing stakeholder with role '%s'", role)));
+			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, "Errand is missing stakeholder with role '%s'".formatted(role)));
 	}
 
 	public static StakeholderDTO getStakeholder(ErrandDTO errand, TypeEnum type, String role) {
 		return getOptionalStakeholder(errand, type, role)
-			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, String.format("Errand is missing stakeholder of type '%s' with role '%s'", type, role)));
+			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, "Errand is missing stakeholder of type '%s' with role '%s'".formatted(type, role)));
 	}
 
 	public static Optional<StakeholderDTO> getOptionalStakeholder(ErrandDTO errand, TypeEnum type, String role) {
